# codex-ollama-local

./: .flake8  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  install.py  pyproject.toml  requirements-dev.txt  run.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/codex_ollama/: __init__.py  __main__.py  cli.py  config.py  ollama_client.py  types.py
tests/: conftest.py  test_cli.py  test_config.py  test_install.py  test_ollama_client.py  test_run.py  test_version.py
