[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-ollama-local"
version = "0.1.0"
description = "A standalone coding CLI agent backed by a local Ollama server."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "codex-ollama-local contributors" }]
keywords = ["ollama", "cli", "agent", "coding-assistant", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/evilmucedin/codex-ollama-local"
Repository = "https://github.com/evilmucedin/codex-ollama-local"

[project.scripts]
col = "codex_ollama.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
